# work-calc

./: .gitignore  README.md  pyproject.toml  requirements.txt  termination_calculator.py  work_calc.py
