[project]
name = ""
version = ""
description = ""
authors = [
    {name = "quadratecode", email = "email@example.com47365835+quadratecode@users.noreply.github.com"},
]
dependencies = [
    "pywebio~=1.5",
    "datetime~=4.3",
    "arrow~=1.2",
    "plotly.express~=0.4",
    "pandas~=1.3",
    "logging~=0.4",
]
requires-python = ">=3.8"
license = {text = "EUPL-1.2"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
