[project]
name = "ch-termination-calc"
version = "1.0.0-beta.1"
description = "A PyWebIO project to check the temporal validity of your termination and to calculate any possible embargo and notice periods under Swiss law."
authors = [
    {name = "quadratecode", email = "email@example.com47365835+quadratecode@users.noreply.github.com"},
]
dependencies = [
    "pywebio~=1.5",
    "datetime~=4.3",
    "arrow~=1.2",
    "plotly.express~=0.4",
    "pandas~=1.3",
    "logging~=0.4",
]
requires-python = ">=3.8"
license = {text = "EUPL-1.2"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
